# klubapp

./: .env.example  .eslintrc.cjs  .gitignore  .prettierignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LIVE-DATA-BRIEF.md  LIVE-DATA-PROPAGATION-BRIEF.md  MINIMALIST-BRIEF.md  PHASE-2-BRIEF.md  PHASE-3-BRIEF.md  PHASE-3.5-BRIEF.md  PHASE-4-BRIEF.md  PRODUCT-POLISH-BRIEF.md  README.md  ROADMAP.md  SECURITY.md  TEAM-REVIEW.md  V2-FEATURES-BRIEF.md  docker-compose.yml  klub-minimal-preview.html  klub-preview.html  klub-retail-preview.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  codeql.yml
apps/web/: next.config.mjs  package.json  railway.toml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
deck/: build-deck.js  demo-script.md  klub-investor-deck.pptx  tearsheet.md
docs/: DEPLOYMENT.md  beta-outreach.md  bulk-integration-notes.md  bulk-schema-confirmation-email.md  ika-encrypt-architecture.md  leader-outreach.md  production-platform.md  week-1-log.md
marketing/: content-calendar.md  email-sequence.md  product-video-script.md
programs/basis-vault/: Cargo.toml  Quasar.toml  README.md
programs/basis-vault/src/: lib.rs  state.rs  tests.rs
programs/basis-vault/src/instructions/: credit_yield.rs  init_position.rs  initialize_vault.rs  mod.rs  request_deposit.rs  request_withdraw.rs  set_deposits_enabled.rs  settle_deposit.rs  settle_withdraw.rs
scripts/: basis-devnet-smoke.ts
(+212 files in other folders)
